--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,8 @@ dependencies = [
     "pydantic (>=2.10.6,<3.0.0)",
     "uvicorn (>=0.34.0,<0.35.0)",
     "fastapi (>=0.115.11,<0.116.0)",
-    "notebook (>=7.4.2,<8.0.0)"
+    "notebook (>=7.4.2,<8.0.0)",
+    "sqlalchemy",
 ]
 
 [tool.poetry]
