--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ dependencies = [
     "fastapi (>=0.115.11,<0.116.0)",
     "notebook (>=7.4.2,<8.0.0)",
     "sqlalchemy",
+    "pytest (>=8.4.0,<9.0.0)",
+    "httpx (>=0.28.1,<0.29.0)",
 ]
 
 [tool.poetry]
