--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "sqlalchemy",
     "pytest (>=8.4.0,<9.0.0)",
     "httpx (>=0.28.1,<0.29.0)",
+    "aiohttp (>=3.12.9,<4.0.0)",
 ]
 
 [tool.poetry]
